--- a/.github/workflows/ci-prod.yml
+++ b/.github/workflows/ci-prod.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Deploy via Http Deploy Service
         run: |
-            curl -H 'X-TOKEN: ${{ secrets.TOKEN }}' -X POST -F 'args=/home/ubuntu/d2ibe' ${{secrets.DEPLOY_HOST}}/rmdir
-            curl -H 'X-TOKEN: ${{ secrets.TOKEN }}' -X POST -F 'file=@d2ibe.zip' -F 'args=/home/ubuntu/d2ibe' ${{secrets.DEPLOY_HOST}}/csync
+            curl -H 'X-TOKEN: ${{ secrets.TOKEN }}' -X POST -F 'args=/var/www/html/d2ibe' ${{secrets.DEPLOY_HOST}}/rmdir
+            curl -H 'X-TOKEN: ${{ secrets.TOKEN }}' -X POST -F 'file=@d2ibe.zip' -F 'args=/var/www/html/d2ibe' ${{secrets.DEPLOY_HOST}}/csync
             curl -H 'X-TOKEN:${{ secrets.TOKEN }}' -X POST -F 'args=restart|d2inodeservice.service' ${{secrets.DEPLOY_HOST}}/systemctl
 
