--- a/.github/workflows/ci-prod.yml
+++ b/.github/workflows/ci-prod.yml
@@ -2,7 +2,7 @@ name: Deploy On Prod
 on:
   push:
     branches:
-      - deploy
+      - prod
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
